--- a/app.json
+++ b/app.json
@@ -1,1 +1,1 @@
-{"latest-version":3,"update-text":"New update is available please update the app then continue to use.","download-link":"https:\/\/t.me\/sktechapplink","telegram":"https:\/\/t.me\/+O6udHr4hogtiNzc1"}
+{"latest-version":3,"update-text":"New update is available please update the app then continue to use.","download-link":"https:\/\/t.me\/sktechapplink","telegram":"https:\/\/t.me\/+O6udHr4hogtiNzc1","events":"[]","categories":"[]"}
